--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -1,5 +1,5 @@
 .section {
-    background-color: var(--color-light-2);
+    background-color: var(--color-main-3);
     height: 100vh;
 }
 
@@ -37,7 +37,7 @@
 .section > div:nth-of-type(2) {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     height: 60vh;
@@ -53,7 +53,7 @@
     height: 100%;
     z-index: 1;
     background-color: var(--color-main-2);
-    clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(50% 50%, 100% 10%, 100% 100%, 0% 100%, 0% 10%);
 }
 
 .service {
@@ -61,12 +61,11 @@
     z-index: 100;
     display: grid;
     grid-template-columns: repeat(4, minmax(20rem, 22rem));
-    flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.5rem;
+    padding: 1rem;
 }
 
 .service > a {
-    width: 22rem;
     height: 10rem;
     box-shadow: var(--box-shadow-1);
     background-color: var(--color-light-2);
@@ -83,6 +82,15 @@
 .service > a img {
     width: 4rem;
 }
+.title {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 2.5rem;
+}
+.title img {
+    width: 9rem;
+}
 
 @media (max-width: 50rem) {
     .section > div:nth-of-type(1) {
@@ -92,6 +100,7 @@
         height: 65vh;
     }
     .service {
-        grid-template-columns: repeat(2, minmax(20rem, 22rem));
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
