--- a/app/(main)/Online_medical_advice/page.module.css
+++ b/app/(main)/Online_medical_advice/page.module.css
@@ -26,12 +26,13 @@
     min-width: 22rem;
     box-shadow: var(--box-shadow-1);
     border-radius: 0.5rem;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 1.5rem 1rem;
     background-color: var(--color-light-1);
     transition: 0.2s;
     position: relative;
+    overflow: hidden;
 }
 
 .all > a::before {
