--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -1,5 +1,5 @@
 .section {
-    background-color: var(--color-main-3);
+    background-color: var(--color-light-2);
     height: 100vh;
 }
 
@@ -60,7 +60,7 @@
     position: relative;
     z-index: 100;
     display: grid;
-    grid-template-columns: repeat(4, minmax(20rem, 22rem));
+    grid-template-columns: repeat(3, minmax(20rem, 25rem));
     gap: 0.5rem;
     padding: 1rem;
 }
