--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
     --color-dark-1: #000000;
     --color-dark-2: #00000039;
     --color-dark-3: #29272b;
-    --color-red-1: #e55a55;
+    -: #e55a55;
     --box-shadow-1: rgba(0, 0, 0, 0.075) 0px 1px 3px,
         rgba(0, 0, 0, 0.137) 0px 1px 2px;
     /* DashBoard */
