--- a/app/(main)/Online_medical_advice/page.module.css
+++ b/app/(main)/Online_medical_advice/page.module.css
@@ -70,12 +70,24 @@
 }
 
 .img_3d_1 {
-    width: 15rem;
+    width: 25rem;
     position: absolute;
-    bottom: 1rem;
+    bottom: 0rem;
+    opacity: 0;
     left: 50%;
     transform: translate(-50%);
+    animation: animation-1 1s ease-in-out forwards;
 }
+
+@keyframes animation-1 {
+    0% {
+    }
+    100% {
+        opacity: 1;
+        bottom: 1rem;
+    }
+}
+
 
 @media (max-width: 40rem) {
     .circle1 {
