--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -7,7 +7,7 @@
     text-align: center;
     font-size: 4rem;
     font-weight: 600;
-    color: var(--color-main-text);
+    color: var(--color-dark-3);
     max-width: 60rem;
     margin: auto;
     display: flex;
@@ -34,6 +34,27 @@
     font-weight: 500;
 }
 
+.section .btn{
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.section .btn a {
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding:1rem 2rem;
+    background-color: var(--color-dark-3);
+    box-shadow: var(--box-shadow-1);
+    color: var(--color-light-1);
+    border-radius: 0.5rem;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
 .section > div:nth-of-type(2) {
     display: flex;
     flex-direction: column;
@@ -53,19 +74,19 @@
     height: 100%;
     z-index: 1;
     background-color: var(--color-main-2);
-    clip-path: polygon(50% 50%, 100% 10%, 100% 100%, 0% 100%, 0% 10%);
+    clip-path: polygon(50% 60%, 100% 20%, 100% 100%, 0% 100%, 0% 20%);
 }
 
 .service {
     position: relative;
     z-index: 100;
     display: grid;
-    grid-template-columns: repeat(3, minmax(20rem, 25rem));
+    grid-template-columns: repeat(4, minmax(20rem, 25rem));
     gap: 0.5rem;
     padding: 1rem;
 }
 
-.service > a {
+.service > div {
     height: 10rem;
     box-shadow: var(--box-shadow-1);
     background-color: var(--color-light-2);
@@ -79,8 +100,13 @@
     gap: 1rem;
 }
 
-.service > a img {
-    width: 4rem;
+.text > p:nth-of-type(2) {
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+.service > div img {
+    width: 5rem;
 }
 .title {
     display: flex;
