--- a/app/(main)/Major/[Major]/page.module.css
+++ b/app/(main)/Major/[Major]/page.module.css
@@ -3,7 +3,7 @@
 }
 
 .section > .head > div select,
-.doctorDetails .part2 select {
+.doctorDetails .part2 input {
     padding: 0.5rem 1rem;
     border: 1px solid var(--color-dark-2);
     border-radius: 0.5rem;
@@ -65,6 +65,14 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+}
+
+.details{
+    color: var(--color-light-3);
+}
+
+.details span{
+    color: var(--color-dark-1);
 }
 
 .part1 .details .name {
