--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -8,12 +8,13 @@
     font-size: 4rem;
     font-weight: 600;
     color: var(--color-dark-3);
+    width: 90%;
     max-width: 60rem;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 40vh;
+    height: 50vh;
 }
 
 .section > div:nth-of-type(1) p {
@@ -61,7 +62,7 @@
     gap: 1rem;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 50vh;
     font-size: 2rem;
     font-weight: 600;
     position: relative;
@@ -119,12 +120,6 @@
 }
 
 @media (max-width: 50rem) {
-    .section > div:nth-of-type(1) {
-        height: 35vh;
-    }
-    .section > div:nth-of-type(2) {
-        height: 65vh;
-    }
     .service {
         width: 100%;
         grid-template-columns: repeat(2, 1fr);
