--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -1,6 +1,7 @@
 .section {
     background-color: var(--color-light-2);
-    height: 100vh;
+    height: 90vh;
+    margin-top: 10vh;
 }
 
 .section > div:nth-of-type(1) {
@@ -8,13 +9,13 @@
     font-size: 4rem;
     font-weight: 600;
     color: var(--color-dark-3);
-    width: 90%;
+    width: 95%;
     max-width: 60rem;
     margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    height: 50vh;
+    justify-content: center;
+    height: 45vh;
 }
 
 .section > div:nth-of-type(1) p {
@@ -62,7 +63,7 @@
     gap: 1rem;
     justify-content: center;
     align-items: center;
-    height: 50vh;
+    height: 45vh;
     font-size: 2rem;
     font-weight: 600;
     position: relative;
