--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -15,6 +15,21 @@
     flex-direction: column;
     justify-content: center;
     height: 45vh;
+    position: relative;
+}
+
+.section > div:nth-of-type(1) > img:nth-of-type(1) {
+    position: absolute;
+    bottom: -10rem;
+    left: -8rem;
+    width: 11rem;
+}
+
+.section > div:nth-of-type(1) > img:nth-of-type(2) {
+    position: absolute;
+    top: 3vh;
+    right: -14rem;
+    width: 12rem;
 }
 
 .section > div:nth-of-type(1) p {
@@ -35,7 +50,7 @@
     font-weight: 500;
 }
 
-.section .btn{
+.section .btn {
     display: flex;
     gap: 1rem;
     justify-content: center;
@@ -45,11 +60,11 @@
 .section .btn a {
     font-size: 1.5rem;
     font-weight: 500;
-    padding:1rem 2rem;
+    padding: 1rem 2rem;
     background-color: var(--color-dark-3);
     box-shadow: var(--box-shadow-1);
     color: var(--color-light-1);
-    border-radius: 0.5rem;
+    border-radius: 20rem;
     width: fit-content;
     display: flex;
     align-items: center;
