--- a/components/main nav/aside/Aside.module.css
+++ b/components/main nav/aside/Aside.module.css
@@ -14,59 +14,17 @@
     font-size: 2rem;
     display: grid;
     grid-template-rows: 1fr 20fr;
+    gap: 2rem;
 }
 
 .head {
-    background-color: #3b3b3b;
-    padding: 1.5rem;
+    padding: 2rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
-    font-size: 1.8rem;
-    font-weight: 500;
 }
 
-.head > div:nth-of-type(1) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-}
-
-.head > div:nth-of-type(1) img {
-    width: 10rem;
-}
-
-.head > div:nth-of-type(2),
-.head > div:nth-of-type(3) ul {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1rem;
-    background-color: var(--color-dark-3);
-    color: var(--color-light-1);
-    border-radius: 1rem;
-    padding: 1rem;
-    list-style: none;
-    margin-bottom: 1rem;
-}
-
-.head > div:nth-of-type(2) a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-}
-
-.head > div:nth-of-type(3) ul li a {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1rem;
-    font-weight: 500;
-}
-
-.head > div:nth-of-type(2)>p {
-    font-weight: 600;
+.head .logo img {
+    width: 15rem;
 }
 
 .close {
@@ -83,52 +41,34 @@
     color: var(--color-light-1);
 }
 
-.aside > ul:nth-of-type(1) {
-    overflow-y: auto;
-}
 .aside > ul > li {
     display: flex;
-    flex-direction: column;
-    border-bottom: 1px solid var(--color-dark-2);
-    cursor: pointer;
-}
-
-.aside > ul > li:hover {
-    background-color: var(--color-main-3);
-}
-
-.aside > ul li > div {
-    display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
+    gap: 2rem;
+    cursor: pointer;
+    font-weight: 600;
+    color:var(--color-dark-5) ;
 }
 
-.aside > ul li a:hover p {
+.aside > ul > li.active {
     color: var(--color-main-1);
 }
 
-.aside > ul li a {
-    padding: 1rem;
+.aside ul > li .border {
+    background-color: transparent;
+    width: 0.7rem;
+    height: 3.5rem;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
 }
 
-.aside > ul li ul {
-    display: flex;
-    flex-direction: column;
-    font-size: 1.8rem;
-    padding: 0 1rem;
-    list-style: none;
+.aside ul > li.active .border {
+    background-color: var(--color-main-1);
 }
 
-.aside > ul li ul li {
+.aside > ul li > a {
     display: flex;
     align-items: center;
-}
-
-.aside > ul li ul li img {
-    width: 3rem;
-}
-
-.offer {
-    color: var(--color-red-1);
+    gap: 1rem;
+    padding: 1rem;
 }
