--- a/components/main nav/nav/Nav.module.css
+++ b/components/main nav/nav/Nav.module.css
@@ -30,22 +30,32 @@
     font-weight: 600;
 }
 
-.list ul li {
+.list > ul li {
     color: var(--color-dark-1);
     cursor: pointer;
-    border-bottom: 2px solid transparent;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+}
+
+.list > ul li > a {
     padding: 0.5rem 0;
+    border-bottom: 2px solid transparent;
     transition: 0.2s;
 }
 
-.list ul li:hover {
+.list > ul li > a:hover {
     border-bottom: 2px solid var(--color-main-2);
 }
 
-.section > div:nth-of-type(1) button {
+.btn > a {
     background-color: var(--color-main-2);
     padding: 1rem 2rem;
     border-radius: 0.5rem;
     color: var(--color-light-2);
     box-shadow: var(--box-shadow-1);
 }
+
+/* ---------------- */
+
+
