--- a/app/(main)/account/page.module.css
+++ b/app/(main)/account/page.module.css
@@ -69,5 +69,9 @@
     .list ul{
         flex-direction: row;
         justify-content: space-evenly;
+        gap: 0;
+    }
+    .list ul li a .icon {
+        display: none;
     }
 }
