--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -1,3 +1,8 @@
+.up {
+    position: relative;
+    overflow: hidden;
+}
+
 .section {
     background-color: var(--color-light-2);
     height: 90vh;
@@ -83,15 +88,7 @@
     position: relative;
 }
 
-.section > div:nth-of-type(2) .background {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: var(--color-main-2);
-    clip-path: polygon(50% 60%, 100% 20%, 100% 100%, 0% 100%, 0% 20%);
-}
+
 
 .service {
     position: relative;
@@ -139,4 +136,25 @@
         width: 100%;
         grid-template-columns: repeat(2, 1fr);
     }
+}
+
+.circle1,
+.circle2 {
+    position: absolute;
+    width: 50rem;
+    height: 50rem;
+    background-color: var(--color-main-3);
+    filter: blur(5rem);
+    border-radius: 50%;
+}
+
+.circle1 {
+    bottom: -20rem;
+    left: -20rem;
+}
+
+.circle2 {
+    top: -20rem;
+    right: -20rem;
+    background-color: #ffc86377;
 }
