--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -57,15 +57,17 @@
 
 .section .btn {
     display: flex;
+    flex-direction: column-reverse;
     gap: 1rem;
     justify-content: center;
+    align-items: center;
     margin-top: 2rem;
 }
 
 .section .btn a {
     font-size: 1.5rem;
     font-weight: 500;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
     background-color: var(--color-dark-3);
     box-shadow: var(--box-shadow-1);
     color: var(--color-light-1);
@@ -88,6 +90,30 @@
     position: relative;
 }
 
+.numUser{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: var(--color-dark-3) ;
+    font-size: 1.4rem ;
+    padding: 0.5rem 1rem ;
+}
+
+.numUser>div ul li{
+width: 3rem;
+height: 3rem;
+border: 1px solid var(--color-dark-2);
+border-radius: 50%;
+background-color: var(--color-light-2);
+display: flex;
+align-items: center;
+justify-content: center;
+margin-left: -1rem;
+}
+
+.numUser>div ul li img{
+    width: 70%;
+}
 
 
 .service {
