--- a/components/main nav/nav/Nav.module.css
+++ b/components/main nav/nav/Nav.module.css
@@ -46,6 +46,25 @@
     border-bottom: 2px solid var(--color-main-2);
 }
 
+.section .search{
+    padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    border: 1px solid var(--color-dark-2);
+    border-radius: 0.5rem;
+    width: 50%;
+    max-width: 30rem;
+    font-size: 1.5rem;
+}
+.section .search input{
+    width: 100%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+
 .btn > a {
     background-color: var(--color-main-2);
     padding: 1rem 2rem;
