--- a/app/(main)/account/page.module.css
+++ b/app/(main)/account/page.module.css
@@ -6,10 +6,13 @@
     padding: 2rem 1rem;
 }
 
-.list ,.content{
+.list ,.content {
     padding: 2rem;
     background-color: var(--color-light-1);
     border-radius: 1rem;
+    height: fit-content;
+}
+.content {
     height: 100%;
 }
 
@@ -58,15 +61,15 @@
 
 /* ----------- */
 
-@media (max-width:60rem) {
+@media (max-width: 60rem) {
     .section {
         display: grid;
         grid-template-columns: 1fr;
     }
-    .list{
+    .list {
         padding: 1rem;
     }
-    .list ul{
+    .list ul {
         flex-direction: row;
         justify-content: space-evenly;
         gap: 0;
