--- a/app/(main)/Home.module.css
+++ b/app/(main)/Home.module.css
@@ -14,6 +14,7 @@
     font-size: 4rem;
     font-weight: 600;
     color: var(--color-dark-3);
+    width: 90%;
     max-width: 60rem;
     margin: auto;
     display: flex;
