--- a/components/userAccount/medicalProfile/family_tree_info/form/Form.module.css
+++ b/components/userAccount/medicalProfile/family_tree_info/form/Form.module.css
@@ -41,3 +41,9 @@
     border-radius: 0.5rem;
     margin-top: 1rem;
 }
+
+@media (max-width: 45rem) {
+    .form {
+        grid-template-columns: repeat(2 , 1fr);
+    }
+}
